ingress-apps/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-staging-guestbook
  namespace: staging
  #annotations:
  #  certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  #tls:
  #  - hosts:
  #    - staging-guestbook.mstakx.io
  #    secretName: staging-secret
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-production-guestbook
  namespace: production
  #annotations:
  #  certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  #tls:
  #  - hosts:
  #    - production-guestbook.mstakx.io
  #    secretName: staging-secret-production
  rules:
  - host: production-guestbook.mstakx.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
